Fixes z-index issue when header is stuck.

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,6 +4,7 @@
   padding: $spacer;
   position: sticky;
   top: 0;
+  z-index: $zindex-sticky;
 }
 
 .nav__list {
